--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/page.css">
+    <link rel="stylesheet" href="page.css">
     <link rel="icon" href="/zomato-logo-0.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -42,7 +42,7 @@
             </div>
             </div>
 <div class="header-image">
-    <img src="/image1.jpeg">
+    <img src="image1.jpeg">
 </div>
         </div>
     </header>
@@ -146,7 +146,7 @@
         <div class="section-4">
             <div class="first">
                 <div>
-                    <img src="/b40b97e677bc7b2ca77c58c61db266fe1603954218.webp" alt="=">
+                    <img src="b40b97e677bc7b2ca77c58c61db266fe1603954218.webp" alt="=">
                 </div>
                 <div class="first-1">
                     <div>
